--- a/.github/workflows/labels-update.yml
+++ b/.github/workflows/labels-update.yml
@@ -10,14 +10,16 @@ jobs:
   labeler:
     name: Update labels
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      issues: write
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
 
       - name: Update labels
         if: success()
-        uses: crazy-max/ghaction-github-labeler@v4
+        uses: crazy-max/ghaction-github-labeler@v5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           yaml-file: .github/labels.yml
